refactor to use css grid for layout

--- a/project/index.html
+++ b/project/index.html
@@ -23,29 +23,27 @@
     <main>
       <div id="container">
         <!-- Image goes here... need to learn how to use .svg files -->
-        <img src="img/illustration-hero.svg" alt="">
-        <div class="card_text">
-          <div class="lead">
-            <h2>Order Summary</h2>
-            <p>
-              You can now listen to millions of songs, audiobooks, and podcasts on
-              any device anywhere you like!
-            </p>
-          </div>
-          <div class="plan">
-            <img src="img/icon-music.svg" alt="musical note">
-            <div>
-              <h3>Annual Plan</h3>
-              <p>$59.99/year</p>
-            </div>
-  
-            <a href="#">Change</a>
-          </div>
-  
-          <a class="payment" href="#">Proceed to Payment</a>
-  
-          <a class="cancel" href="#">Cancel Order</a>
+        <img src="img/illustration-hero.svg" alt="" />
+        <div class="lead">
+          <h2>Order Summary</h2>
+          <p>
+            You can now listen to millions of songs, audiobooks, and podcasts on
+            any device anywhere you like!
+          </p>
         </div>
+        <div class="plan">
+          <img src="img/icon-music.svg" alt="musical note" />
+          <div>
+            <h3>Annual Plan</h3>
+            <p>$59.99/year</p>
+          </div>
+
+          <a href="#">Change</a>
+        </div>
+
+        <a class="payment" href="#">Proceed to Payment</a>
+
+        <a class="cancel" href="#">Cancel Order</a>
       </div>
     </main>
     <div class="attribution">
